more styling changes, also some quirks on smaller screens that need fixing

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway");
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 :root {
   --glow-color: hsl(186 100% 69%);
   --lime: #cfff04;
@@ -15,7 +15,8 @@
   animation: fadeIn 1.5s ease-in-out;
 
 } */
-html, body {
+html,
+body {
   height: 100%; /* Ensure the body takes up the full viewport height */
   margin: 0;
   padding: 0;
@@ -24,12 +25,12 @@ html, body {
 body {
   padding-top: 50px;
   /* background: url("../marble.webp"); */
-  background: linear-gradient(to left, #a8bdbb 10%,  #eee 195%);
+  background: linear-gradient(to left, #a8bdbb 10%, #eee 195%);
   /* background: linear-gradient( to right #a8bdbb 50% , #FFF 75%); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  font-family: "Raleway", sans-serif;
+  font-family: "Oswald", sans-serif;
   animation: fadeIn 1.5s ease-in-out;
   position: relative;
   z-index: 1;
@@ -60,9 +61,12 @@ h1 {
   padding-left: 4px;
   padding-bottom: 9px;
   padding-top: 5px;
+  margin-top: 20px;
   /* text-shadow: var(--glow-color) 1px 0px 5px; */
   /* color: var(--glow-color); */
-  color: #a8a8a8;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(90deg, #0e0000, #6ea4a8 50%, #2f0505);
   letter-spacing: 8px;
   font-weight: 900;
   /* border: 0.15em solid var(--glow-color); */
@@ -74,11 +78,13 @@ h1 {
   box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
     0px 0px 0.5em 0px var(--glow-color); */
 }
+
+
 #coin {
   position: relative;
   margin: 0 auto;
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   cursor: pointer;
 }
 
@@ -88,18 +94,18 @@ h1 {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  -webkit-box-shadow: inset 0 0 45px rgba(255, 255, 255, 0.3),
+  /* -webkit-box-shadow: inset 0 0 45px rgba(255, 255, 255, 0.3),
     0 12px 20px -10px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: inset 0 0 45px rgba(255, 255, 255, 0.3),
     0 12px 20px -10px rgba(0, 0, 0, 0.4);
   box-shadow: inset 0 0 10px var(--glow-color),
-    0 6px 4px -10px var(--glow-color);
+    0 6px 4px -10px var(--glow-color); */
   transition: 0.7s ease-out;
 }
 
-#coin div:hover {
+/* #coin div:hover {
   box-shadow: inset 0 0 10px #fff, 0 6px 4px -10px #fff;
-}
+} */
 
 .side-a {
   /* background-color: #bb0000; */
@@ -211,13 +217,14 @@ Flicker button:
   margin: auto;
   text-align: center;
   /* color: var(--glow-color); */
-  color: #e7e7e7;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(90deg, #0e0000, #6ea4a8 50%, #2f0505);
   cursor: pointer;
   /* border: 0.15em solid var(--glow-color); */
   border: none;
   border-radius: 0.45em;
-  background: none;
-  font-family: "Raleway", sans-serif;
+  font-family: "Oswald", sans-serif;
   width: 200px;
   letter-spacing: 3px;
   padding-top: 10px;
@@ -226,7 +233,8 @@ Flicker button:
   font-weight: 600;
   margin-bottom: 40px;
   margin-top: 20px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
   /* -webkit-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
     0px 0px 0.5em 0px var(--glow-color);
   -moz-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
@@ -239,14 +247,17 @@ Flicker button:
 }
 
 .glowing-btn:hover {
-  color: #FFF;
+  color: #fff;
 }
 
 .footerText {
-  color: var(--glow-color);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(40deg,  #000000, #6ea4a8 1%, #2f0505);
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 50px;
+  font-size: 30px;
 }
 
 @media (width > 1250px) {
@@ -277,14 +288,21 @@ Flicker button:
     justify-content: center;
     margin: auto;
     border-radius: 30px;
-    background: linear-gradient(to bottom right, #FFF 5%,  #a8bdbb 55%);
+    background: linear-gradient(to bottom right, #fff 5%, #a8bdbb 55%);
     box-shadow: rgba(38, 57, 77, 0.5) 50px 30px 100px 25px;
-
   }
-.outer-wrap {
-  display: flex;
-  justify-content: space-between;
-}
+  .outer-wrap {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2.4px solid #939393;
+    padding-bottom: 10px;
+    margin-left: 2px; 
+    margin-right: 2px; 
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  }
+
   .inner-wrap1 {
     display: flex;
     /* margin: 10px 0; */
@@ -294,51 +312,50 @@ Flicker button:
     gap: 10px;
     margin-left: 5px;
     margin-top: 5px;
-
   }
   .inner-wrap2 {
     display: flex;
     /* margin: 10px 0; */
     flex-direction: row;
     padding-top: 8px;
-    padding-right: 5px;
+    padding-right: 10px;
     gap: 10px;
     margin-top: 5px;
     margin-right: 5px;
-
   }
-  
+
   .circle {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    box-shadow: inset 0px 2px 3px rgba(0, 0, 0, 0.2); /* Subtle inset shadow */
+    box-shadow: inset 0px 2px 3px rgba(0, 0, 0, 0.2); 
   }
-  
+
   /* Apple button styles */
   .apple-button {
     border: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), inset 0px 2px 4px rgba(255, 255, 255, 0.25); /* Apple-like look */
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1),
+      inset 0px 2px 4px rgba(255, 255, 255, 0.25); /* Apple-like look */
   }
-  
+
   .red {
     background-color: #ff605c; /* Red Apple button */
   }
-  
+
   .yellow {
     background-color: #ffbd44; /* Yellow Apple button */
   }
-  
+
   .green {
     background-color: #00ca4e; /* Green Apple button */
   }
-  
+
   /* Dark grey buttons */
   .grey {
     background-color: #3a3a3a; /* Dark grey color */
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5), inset 0px 2px 4px rgba(255, 255, 255, 0.15); /* Slight shadow for grey buttons */
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5),
+      inset 0px 2px 4px rgba(255, 255, 255, 0.15); /* Slight shadow for grey buttons */
   }
-  
 
   .glowing-btn {
     width: 300px;
